# modular-audio-processor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TimeTracking.txt  audio_test.h
SignalErrorDetection/: CRC8.cpp  CRC8.h  Checksum8.c  Checksum8.cpp  Checksum8.h  SafeDataCommunication.h
TimeTracking/: TimeTrackingD2.txt
app/: FeatherController.spec  build_exe.bat  feather_controller.py  requirements.txt
arduino/: map.ino
i2s_test/: CMakeLists.txt  README.md
i2s_test/src/: main.cpp
libraries/: GPIO_IRQManager.hpp  I2S.cpp  I2S.h  I2S.hpp  I2S_Rx_autoFrame.pio.h  I2S_Rx_naive.pio.h  I2S_Tx_compact.pio.h  I2S_Tx_naive.pio.h  I2S_compact.pio.h  I2S_naive.pio.h  PingPongBuffer.h  PushButton.hpp  RotaryEncoder.hpp  RxPingPong.cpp  RxPingPong.h  SPI.pio.h  SPI_Byte.pio.h  TxPingPong.cpp  TxPingPong.h  adc.cpp  adc.h  adc.hpp  fft.cpp  fft.hpp  fft_priv.hpp  oled.cpp  oled.h  persistent_state.cpp  persistent_state.h
libraries/PIO/: I2S_Rx_autoFrame.pio  I2S_Tx_compact.pio  I2S_Tx_naive.pio  I2S_compact.pio  I2S_naive.pio  I2s_Rx_irq.pio  I2s_Rx_naive.pio  SPI.pio  (+1 more)
src/: LOGIC_DEFS.h  PIN_DEFS.h  common.cpp  common.h  main.cpp  module_FUNCTION.cpp  module_INPUT.cpp  module_OUTPUT.cpp
test/: I2S_Rx_test.cpp  I2S_Tx_test.cpp  I2S_test.cpp  PushButton_test.cpp  RotaryEncoder_test.cpp  SPI_master_pio_test.cpp  adc_test.cpp  general_test.cpp  main_master.cpp  oled_test.cpp  spi_test.cpp
wokwi/: SignalErrorDetection.c  SignalErrorDetection.h  diagram.json  filters.c  filters.h  main.c  oled.c  oled.h  persistent_state.c  persistent_state.h  wokwi-project.txt
(+42 files in other folders)
